Changed DOM manipulation to prevent malicious HTML insertion -Replaced innerHTML manipulation with textContent updates

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <h1>Top Pot Baking Estimates by Location</h1>
   <p>Donuts to bake per hour per location based on estimated demand</p>
   <table>
+    <thead></thead>
+    <tbody></tbody>
   </table>
   <script src="donut_shop.js"></script>
 </body>
