Form submit event listener -added addNewStore function, triggered on form submission -addNewStore calls displayRows, which causes a bug: all the existing locations are listed AGAIN before the new one is added -also changed the way store instances are created, packed into array to match the method Brook showed in class

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
     <br>
     <label for="submit">
-      <input id="submit" type="submit" required>
+      <button id="submit" type="submit">Submit</button>
     </label>
   </form>
   <script src="donut_shop.js"></script>
