User can now modify an existing store -logic added to check if the store already exists -if it does, it will be modified, otherwise it will be created -modified the display method on the Store object so that it will detect if its row is already present in the DOM. If it is, it will modify it in place. -clarified the new functionality in the HTML -updated the readme

--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
     <tbody></tbody>
   </table>
   <form>
-    <h2>Add a new store location</h2>
+    <h2>Add/modify a store</h2>
+    <p>Modify a store by entering its name in the "Location name" field below. If the store doesn't exist, it will be created.</p>
     <p>
       <label for="name">
-        <p>Location name</p>
+        <p>Location name:</p>
         <input id="name" required>
       </label>
     </p>
     <p>
       <label for="min-cust">
-        <p>Minimum number of customers per hour</p>
+        <p>Minimum number of customers per hour:</p>
         <input id="min-cust" type="number" required>
       </label>
     </p>
     <p>
       <label for="max-cust">
-        <p>Maximum number of customers per hour</p>
+        <p>Maximum number of customers per hour:</p>
         <input id="max-cust" type="number" required>
       </label>
     </p>
     <p>
       <label for="avg-per-cust">
-        <p>Average number of donuts purchased per customer</p>
+        <p>Average number of donuts purchased per customer:</p>
         <input id="avg-per-cust" type="number" required>
       </label>
     </p>
