Made form elements align vertically

--- a/index.html
+++ b/index.html
@@ -15,18 +15,26 @@
   <form>
     <h2>Add/modify a store</h2>
     <p>Modify a store by entering its name in the "Location name" field below. If the store doesn't exist, it will be created.</p>
-    <p class="form-field"><label for="name">Location name:</label>
-    <input id="name" required></p>
-    <p class="form-field"><label for="min-cust">Min customers/hour:</label>
-    <input id="min-cust" type="number" required></p>
-    <p class="form-field"><label for="max-cust">Max customers/hour:</label>
-    <input id="max-cust" type="number" required></p>
-    <p class="form-field"><label for="avg-per-cust">Average/customer:</label>
-    <input id="avg-per-cust" type="number" required></p>
-    <br>
-    <label for="submit">
+    <p class="form-field">
+      <label for="name">Location name:</label>
+      <input id="name" required>
+    </p>
+    <p class="form-field">
+      <label for="min-cust">Min customers/hour:</label>
+      <input id="min-cust" type="number" required>
+    </p>
+    <p class="form-field">
+      <label for="max-cust">Max customers/hour:</label>
+      <input id="max-cust" type="number" required>
+    </p>
+    <p class="form-field">
+      <label for="avg-per-cust">Average/customer:</label>
+      <input id="avg-per-cust" type="number" required>
+    </p>
+    <p class="form-field">
+      <label for="submit"></label>
       <button id="submit" type="submit">Submit</button>
-    </label>
+    </p>
   </form>
   <script src="donut_shop.js"></script>
 </body>
