--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <h1>Top Pot Baking Estimates by Location</h1>
-  <div id="background-box"></div>
+  <div id="background-box">
+    <img src="images/old-fashioned.jpg" alt="Old Fashioned Donut">
+    <img src="images/sprinkles.jpg" alt="Sprinkles Donut">
+  </div>
   <img src="images/Top_Pot_Doughnuts_01.png" alt="Top Pot logo" id="logo">
   <p>Donuts to bake per hour per location based on estimated demand</p>
   <table>
