Donut images position fix -Added table to keep images in place when changing viewport size -Updated HTML, CSS, JS files to distinguish between the two tables

--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
   <h1>Top Pot Baking Estimates by Location</h1>
   <div id="background-box">
-    <img src="images/old-fashioned.jpg" alt="Old Fashioned Donut">
-    <img src="images/sprinkles.jpg" alt="Sprinkles Donut">
+    <table class="images-table">
+      <tr>
+        <td><img src="images/old-fashioned.jpg" alt="Old Fashioned Donut"></td>
+        <td></td>
+        <td><img src="images/sprinkles.jpg" alt="Sprinkles Donut"></td>
+      </tr>
+    </table>
   </div>
   <img src="images/Top_Pot_Doughnuts_01.png" alt="Top Pot logo" id="logo">
   <p>Donuts to bake per hour per location based on estimated demand</p>
-  <table>
+  <table class="data-table">
     <thead></thead>
     <tbody></tbody>
   </table>
