Clicking a table row populates the form fields

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </p>
     <p class="form-field">
       <label for="avg-per-cust">Average/customer:</label>
-      <input id="avg-per-cust" type="number" required>
+      <input id="avg-per-cust" type="number" step="any" required>
     </p>
     <p class="form-field">
       <label for="submit"></label>
