Updated readme and text on webpage to highlight new clickable table functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <tbody></tbody>
   </table>
     <h2>Add/modify a store</h2>
-    <p>Modify a store by entering its name in the "Location name" field below. If the store doesn't exist, it will be created.</p>
+    <p>Modify a store by clicking its row in the table or by entering its name in the "Location name" field below. If typing a new name, a new store will be created.</p>
   <form>
     <p class="form-field">
       <label for="name">Location name:</label>
